:iphone: Minimal responsive stuff to prevent label overlap

--- a/src/zac/sass/components/forms/_form.scss
+++ b/src/zac/sass/components/forms/_form.scss
@@ -1,4 +1,5 @@
 @import "../../lib/colors";
+@import "../../lib/responsive";
 
 $form-centered-width--normal: 40vw !default;
 
@@ -35,6 +36,7 @@ $form-centered-width--normal: 40vw !default;
 
   & &__field-group {
     display: flex;
+    flex-wrap: wrap;
 
     margin: 1em 0;
     padding: 0;
@@ -47,6 +49,11 @@ $form-centered-width--normal: 40vw !default;
     > * {
       flex: 1;
       padding-right: 1em;
+
+      @include screen-xs() {
+        width: 100%;
+        flex: none;
+      }
     }
   }
 }
