--- a/src/zac/sass/views/_zaak-detail.scss
+++ b/src/zac/sass/views/_zaak-detail.scss
@@ -1,4 +1,5 @@
 @import "../lib/colors";
+@import "../lib/responsive";
 
 $zaak-detail__panel-spacing: $content-panel-spacing !default;
 
@@ -37,6 +38,10 @@ $zaak-detail__panel-spacing: $content-panel-spacing !default;
       margin-left: -0.5em;
       padding-left: 0.5em;
       border-left: solid 4px rgba($color-secondary, 0.8);
+    }
+
+    @include screen-small() {
+      width: 100%;
     }
   }
 
